........S. [ZBXNEXT-4520] added values to boolean mapping: "ok, master" as 1 and "err, slave" as 0 (viktors)
..F....... [ZBXNEXT-4185] added support of multiple items in "Plain text" widget (ashubin)
........S. [ZBXNEXT-4163] added support LLD, User macros and User macros with context from LLD macro in Items preprocessing (MVekslers)

Bug fixes:
..F....... [ZBX-13783] dropped support for Zapcat-style and multi-level parameter arrays from item key validation in frontend (agriscenko)
..F....... [ZBX-12359] fixed "Automatic icon selection" checkbox not working and displaying two icons at once in map constructor (Ivo)
..F....... [ZBX-12239] fixed global search form allowing to submit empty search queries (agriscenko)
..F....... [ZBX-12177] renamed "Icon" to "Map element" in Network map properties and constructor (agriscenko)
........S. [ZBX-14333] fixed {ESC.HISTORY} and action log not to display colon without target host when executed on Zabbix server (vso)
.......PS. [ZBX-14345] fixed lock wait timeout error handling on MySQL to avoid possible data loss (vso)
A.F....... [ZBX-13361] fixed error messages when configuring an existing item to have an update interval (miks)
...G...PS. [ZBX-14328] improved logging of command execution failures (vjaceslavs)
....I..... [ZBX-13803] fixed "make install" to respect DESTDIR variable, this is essential for packaging (dimir)
..F....... [ZBX-12603] fixed tab navigation and keyboard interaction in dashboard sharing and properties dialogues; added validation inside popups (miks, vmurzins)
........S. [ZBX-13043] removed error message for when user has defined media but all of them are disabled (viktors)
........S. [ZBX-14312] fixed possible deadlock in history syncer when housekeeper is deleting events (vso)
..F....... [ZBX-13697] fixed session expiration when changing default authentication method (miks)
..F....... [ZBX-13768] fixed disabled 'add' button showing in templated item preprocesing form (miks)